# telegram-channel-subs-monitor

./: .env.example  .gitignore  README.md  TODO.md  bot_methods.py  config.py  firebase_methods.py  logging_config.py  main.py  pyproject.toml  requirements-dev.txt  telegram-stats-monitor.service  telethon_methods.py
models/: admin_action.py
scripts/: firestore_probe.py
