[project]
name = "telegram-channel-subs-monitor"
version = "0.0.0"
description = "Monitors Telegram channel admin log for joins/leaves, stores in Firestore, notifies a bot chat."
requires-python = ">=3.12"
# Direct runtime dependencies only. Transitive deps (grpcio, cryptography,
# google-cloud-*, etc.) are resolved by uv and pinned in uv.lock.
# Upper bounds cap the next major to avoid accidental breaking upgrades —
# deliberate bumps live in their own PR.
dependencies = [
    "firebase-admin>=7.0,<8",
    "google-api-core>=2.11,<3",
    "google-cloud-firestore>=2.11,<3",
    "pydantic-settings>=2.14,<3",
    "requests>=2.31,<3",
    "sentry-sdk>=2.0,<3",
    "telethon>=1.29,<2",
]

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Curated set — keep signal high, avoid noisy style-only rules for now.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports/vars, undefined names)
    "I",    # isort (import order)
    "UP",   # pyupgrade (py312+ idioms)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
    "ASYNC",# async/await pitfalls
]

[tool.ruff.lint.isort]
known-first-party = ["models"]

[tool.ruff.format]
# Default (double quotes, 4 spaces) — fine with our existing style.

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["."]
exclude = [".venv", "scripts", "**/__pycache__"]
